--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   knockd:
-    image: registry.gitlab.com/aristarkh87/docker-knockd
+    image: aristarkh87/docker-knockd
     network_mode: "host"
     privileged: true
     volumes:
